--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,7 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# Ignore any generated keys
+esm.key
