--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -9,3 +9,9 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "master" }
+ws = "*"
+url = "2.0.0"
+base64 = "0.12.3"
+log = "0.4.11"
+env_logger = "0.7.1"
