--- a/extension/Cargo.toml
+++ b/extension/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Bryan <WolfkillArcadia@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -14,6 +17,6 @@ ws = "*"
 url = "2.0.0"
 base64 = "0.12.3"
 log = "0.4.11"
-env_logger = "0.7.1"
 lazy_static = "1.4.0"
 crossbeam-channel = "0.4.4"
+log4rs = "0.13.0"
