--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,7 @@ lazy_static = "1.4.0"
 crossbeam-channel = "0.4.4"
 log4rs = "0.13.0"
 yaml-rust = "0.4"
-once_cell = "1.5.2"
+anyhow = "1.0"
+
+[dev-dependencies]
+pretty_assertions = "0.6.1"
