--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ crossbeam-channel = "0.4.4"
 log4rs = "0.13.0"
 yaml-rust = "0.4"
 anyhow = "1.0"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+diesel = { version = "1.4.4", features = ["chrono", "mysql", "r2d2"] }
+rust-ini = "0.16.1"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
