Cleaned up RwLock usage Added a customizable logging_path option

--- a/@ESM/config.yml
+++ b/@ESM/config.yml
@@ -2,3 +2,4 @@ ws_url: "ws://esm.mshome.net:3001"
 
 # Also supported variables
 # extdb_file_path: The full path plus filename for the extDB config
+# logging_path: The full path plus filename for the extension to log to
