--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-arma-rs = { git = "https://github.com/WolfkillArcadia/arma-rs", branch = "expirement" }
+arma-rs = { path = "../arma-rs/core" }
 ws = "*"
 url = "2.0.0"
 base64 = "0.12.3"
