--- a/bin/build
+++ b/bin/build
@@ -1,4 +1,7 @@
 #!/bin/bash
 
+# Install deps
+bundle install > /dev/null
+
 # Run the build script
-./tools/esm build "$@"
+bundle exec ruby ./tools/esm build "$@"
