--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,12 @@ authors = ["Bryan <WolfkillArcadia@gmail.com>"]
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib"]
+name = "esm_client"
+crate-type = ["cdylib", "rlib"]
+
+[[bin]]
+name = "esm_bin"
+path = "src/bin/bin.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -20,11 +25,15 @@ log = "0.4.11"
 lazy_static = "1.4.0"
 crossbeam-channel = "0.4.4"
 log4rs = "0.13.0"
-yaml-rust = "0.4"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4.4", features = ["chrono", "mysql", "r2d2"] }
 rust-ini = "0.16.1"
+esm_message = { git = "https://github.com/WolfkillArcadia/esm_message.git", branch = "main" }
+message-io = { version = "0.14", default-features = false, features = ["tcp"] }
+parking_lot = "0.10"
+bincode = "1.3.1"
+serde_yaml = "0.8"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
