--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,6 @@ log = "0.4.11"
 lazy_static = "1.4.0"
 crossbeam-channel = "0.4.4"
 log4rs = "0.13.0"
-anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4.4", features = ["chrono", "mysql", "r2d2"] }
 rust-ini = "0.16.1"
@@ -37,3 +36,6 @@ serde_yaml = "0.8"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
+
+[patch."https://github.com/WolfkillArcadia/esm_message"]
+esm_message = { path = "../esm_message" }
