--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/bin/bin.rs"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-arma-rs = { path = "../arma-rs/core", features = ["chrono_datetime"] }
+arma-rs = { path = "../arma-rs/core", features = ["chrono", "uuid"] }
 ws = "*"
 url = "2.0.0"
 base64 = "0.12.3"
@@ -33,6 +33,7 @@ message-io = { version = "0.14", default-features = false, features = ["tcp"] }
 parking_lot = "0.10"
 bincode = "1.3.1"
 serde_yaml = "0.8"
+uuid = { version = "0.8", features = ["serde", "v4"] }
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
