--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/bin/bin.rs"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-arma-rs = { path = "../arma-rs/core", features = ["chrono", "uuid"] }
+arma-rs = { git = "https://github.com/WolfkillArcadia/arma-rs.git", features = ["chrono", "uuid"] }
 ws = "*"
 url = "2.0.0"
 base64 = "0.12.3"
@@ -38,5 +38,8 @@ uuid = { version = "0.8", features = ["serde", "v4"] }
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 
-[patch."https://github.com/WolfkillArcadia/esm_message"]
-esm_message = { path = "../esm_message" }
+# [patch."https://github.com/WolfkillArcadia/esm_message"]
+# esm_message = { path = "../esm_message" }
+
+[patch."https://github.com/WolfkillArcadia/arma-rs.git"]
+arma-rs = { path = "../arma-rs/core" }
