--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "esm"
 version = "2.0.0"
 authors = ["Bryan <WolfkillArcadia@gmail.com>"]
 edition = "2018"
+build = "build.rs"
 
 [lib]
 name = "esm_client"
@@ -18,7 +19,6 @@ path = "src/bin/bin.rs"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 arma-rs = { git = "https://github.com/WolfkillArcadia/arma-rs.git", features = ["chrono", "uuid"] }
-ws = "*"
 url = "2.0.0"
 base64 = "0.12.3"
 log = "0.4.11"
@@ -38,6 +38,9 @@ uuid = { version = "0.8", features = ["serde", "v4"] }
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 regex = "1"
+
+[build-dependencies]
+vergen = { version = "5", default-features = false, features = ["git"] }
 
 # [patch."https://github.com/WolfkillArcadia/esm_message"]
 # esm_message = { path = "../esm_message" }
