Clean up build process

--- a/tools/run.env
+++ b/tools/run.env
@@ -1,4 +1,7 @@
-export ESM_REMOTE_HOST="ubuntu@arma-server.mshome.net"
-export ESM_SERVER_PATH="/home/ubuntu/arma_server"
-export ESM_DEPLOYMENT_PATH="/home/ubuntu/esm_arma"
-export ESM_SERVER_DIRECTORY_NAME="arma_server"
+export ESM_SERVER_PATH="E:\ArmaServers"
+export ESM_DEPLOYMENT_PATH="E:\ArmaServers\Deployment\ESM"
+export ESM_MYSQL_HOST="localhost"
+export ESM_MYSQL_PORT="3306"
+export ESM_MYSQL_USER=""
+export ESM_MYSQL_PASSWORD=""
+export ESM_MYSQL_DATABASE=""
