--- a/@esm/config.yml
+++ b/@esm/config.yml
@@ -1,4 +1,4 @@
-# esm_client's configuration file
+# @esm's configuration file
 # You can override any of the following options:
 #   connection_url:             The URL that esm_server is running on
 #   log_level:                  The verbosity level of the internal logger. Valid options: trace, debug, info, warn, error
@@ -7,9 +7,3 @@
 #   extdb_version:              The version of ExtDB the server is using. This is mainly used for development
 #   logging_path:               The full path plus filename for the extension to log to
 #   env:                        The ENV that the code should run in. Valid options: production, test, development
-
-connection_url: "esm.mshome.net:3003"
-log_level: "debug"
-env: "development"
-# extdb_conf_path: "tools/extdb4-conf.ini"
-# extdb_version: 3
