--- a/esm/Cargo.toml
+++ b/esm/Cargo.toml
@@ -18,10 +18,7 @@ path = "src/bin/bin.rs"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-arma-rs = { git = "https://github.com/WolfkillArcadia/arma-rs.git", features = [
-    "chrono",
-    "uuid",
-] }
+arma-rs = { version = "1.7.0", features = ["uuid", "serde_json", "chrono"] }
 url = "2.0.0"
 base64 = "0.12.3"
 log = "0.4.11"
