--- a/tools/build_host/Cargo.toml
+++ b/tools/build_host/Cargo.toml
@@ -12,3 +12,4 @@ serde = "1.0.137"
 clap = { version = "3.1.18", features = ["derive", "color"] }
 colored = "2"
 lazy_static = "1.4.0"
+parking_lot = "0.10"
