--- a/tools/build_receiver/Cargo.toml
+++ b/tools/build_receiver/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 message-io = { version = "0.14", default-features = false, features = ["tcp"] }
 bincode = "1.3.3"
 serde = "1.0.137"
+clap = { version = "3.1.18", features = ["derive"] }
+colored = "2"
+lazy_static = "1.4.0"
