--- a/tools/build_host/Cargo.toml
+++ b/tools/build_host/Cargo.toml
@@ -13,3 +13,4 @@ clap = { version = "3.1.18", features = ["derive", "color"] }
 colored = "2"
 lazy_static = "1.4.0"
 parking_lot = "0.10"
+regex = "1.5.6"
