--- a/tools/build_receiver/Cargo.toml
+++ b/tools/build_receiver/Cargo.toml
@@ -11,3 +11,7 @@ bincode = "1.3.3"
 serde = "1.0.137"
 clap = { version = "3.1.18", features = ["derive"] }
 colored = "2"
+uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
+lazy_static = "1.4.0"
+parking_lot = "0.10"
+vfs = "0.7.1"
