--- a/tools/build_common/Cargo.toml
+++ b/tools/build_common/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 vfs = "0.7.1"
 uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
-serde = "1.0.137"
+serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8.24"
+parking_lot = "0.10"
