--- a/tools/build_receiver/Cargo.toml
+++ b/tools/build_receiver/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 message-io = { version = "0.14", default-features = false, features = ["tcp"] }
 bincode = "1.3.3"
-serde = "1.0.137"
+serde = { version = "1.0", features = ["derive"] }
 clap = { version = "3.1.18", features = ["derive"] }
 colored = "2"
 uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
@@ -16,3 +16,5 @@ lazy_static = "1.4.0"
 parking_lot = "0.10"
 vfs = "0.7.1"
 build_common = { path = "../build_common" }
+serde_json = "1.0"
+rand = "0.8.5"
