--- a/tools/build_host/Cargo.toml
+++ b/tools/build_host/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 
 [dependencies]
 message-io = { version = "0.14", default-features = false, features = ["tcp"] }
-bincode = "1.3.3"
-serde = "1.0.137"
+serde = { version = "1.0", features = ["derive"] }
 clap = { version = "3.1.18", features = ["derive", "color"] }
 colored = "2"
 lazy_static = "1.4.0"
@@ -18,3 +17,4 @@ serde_yaml = "0.8.24"
 vfs = "0.7.1"
 uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
 build_common = { path = "../build_common" }
+serde_json = "1.0"
