Added ctrl-c handler Code cleanup New System command

--- a/tools/build_host/Cargo.toml
+++ b/tools/build_host/Cargo.toml
@@ -18,3 +18,4 @@ vfs = "0.7.1"
 uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
 build_common = { path = "../build_common" }
 serde_json = "1.0"
+ctrlc = "3.2.2"
