--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,3 @@
 [workspace]
-members = [
-  "esm",
-  "tools/build_host",
-  "tools/build_receiver",
-  "tools/build_common",
-]
+members = ["esm", "build/host", "build/receiver", "build/common"]
 default-members = ["esm"]
-# exclude = ["tools\\server", "tools\\client"]
