--- a/esm/Cargo.toml
+++ b/esm/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/bin/bin.rs"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-arma-rs = { version = "1.7.0", features = ["uuid", "serde_json", "chrono"] }
+arma-rs = { version = "1.7", features = ["uuid", "serde_json", "chrono"] }
 url = "2.0.0"
 base64 = "0.12.3"
 log = "0.4.11"
@@ -31,12 +31,9 @@ message-io = { version = "0.14", default-features = false, features = ["tcp"] }
 parking_lot = "0.10"
 bincode = "1.3.1"
 serde_yaml = "0.8"
-uuid = { version = "0.8", features = ["serde", "v4"] }
+uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
 mysql = "*"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 regex = "1"
-
-[build-dependencies]
-vergen = { version = "5", default-features = false, features = ["git"] }
