--- a/esm/Cargo.toml
+++ b/esm/Cargo.toml
@@ -15,7 +15,9 @@ path = "src/bin/bin.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
+parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
 serde_json = "1.0"
 arma-rs = { version = "1.7", features = ["uuid", "serde_json", "chrono"] }
 url = "2.0.0"
@@ -26,10 +28,8 @@ crossbeam-channel = "0.4.4"
 log4rs = "0.13.0"
 chrono = { version = "0.4", features = ["serde"] }
 rust-ini = "0.16.1"
-esm_message = { git = "https://github.com/WolfkillArcadia/esm_message.git", branch = "main" }
+esm_message = { path = "../../esm_message/message" }
 message-io = { version = "0.14", default-features = false, features = ["tcp"] }
-parking_lot = "0.10"
-bincode = "1.3.1"
 serde_yaml = "0.8"
 uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
 mysql = "*"
