--- a/esm/Cargo.toml
+++ b/esm/Cargo.toml
@@ -28,7 +28,7 @@ crossbeam-channel = "0.4.4"
 log4rs = "0.13.0"
 chrono = { version = "0.4", features = ["serde"] }
 rust-ini = "0.16.1"
-esm_message = { path = "../../esm_message/message" }
+esm_message = { git = "https://github.com/WolfkillArcadia/esm_message.git", branch = "main" }
 message-io = { version = "0.14", default-features = false, features = ["tcp"] }
 serde_yaml = "0.8"
 uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
