--- a/esm/Cargo.toml
+++ b/esm/Cargo.toml
@@ -30,6 +30,7 @@ serde_yaml = "0.8"
 uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
 mysql = "*"
 tokio = { version = "1.20.1", features = ["full"] }
+rand = "0.8"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
