--- a/esm/Cargo.toml
+++ b/esm/Cargo.toml
@@ -31,6 +31,7 @@ uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
 mysql = "*"
 tokio = { version = "1.20.1", features = ["full"] }
 rand = "0.8"
+parking_lot = "0.12"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
