--- a/arma/Cargo.toml
+++ b/arma/Cargo.toml
@@ -24,7 +24,7 @@ lazy_static = "1.4.0"
 log4rs = "0.13.0"
 chrono = { version = "0.4", features = ["serde"] }
 rust-ini = "0.16.1"
-esm_message = { git = "https://github.com/itsthedevman/esm_message.git", branch = "main" }
+esm_message = { path = "../message/message" }
 message-io = { version = "0.14", default-features = false, features = ["tcp"] }
 serde_yaml = "0.8"
 uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
