--- a/server/@exileserver/config.cfg
+++ b/server/@exileserver/config.cfg
@@ -1,11 +1,11 @@
-hostname        					= "exilemod.com (1.0.4|1.80)";
-password         					= "";
-passwordAdmin      					= "changeme";
-serverCommandPassword				= "changeme";
+hostname        					= "exilemod.com (1.0.4|1.80) ¯\_(ツ)_/¯";
+password         					= "nope";
+passwordAdmin      					= "nope";
+serverCommandPassword				= "nope";
 logFile            					= "server.log";
-verifySignatures   					= 1; // Do NOT use verifySignatures=2! It costs too many FPS
-BattlEye            				= 1;
-requiredBuild 						= 143869; // 1.80 stable
+verifySignatures   					= 0; // Do NOT use verifySignatures=2! It costs too many FPS
+BattlEye            				= 0;
+requiredBuild 						= 141764; // 1.70 stable
 allowedLoadFileExtensions[] 		= {:};
 allowedPreprocessFileExtensions[] 	= {"sqf"};
 allowedHTMLLoadExtensions[] 		= {"html"};
@@ -34,7 +34,7 @@ class Missions
 {
 	class Exile
 	{
-		template = Exile.Malden;  // Exile.Namalsk, Exile.Altis, Exile.Tanoa, ExileEscape.Altis, ExileEscape.Tanoa
+		template = exile.tanoa;  // Exile.Namalsk, Exile.Altis, Exile.Tanoa
 
 		// do NOT use custom difficulties!
 		// Use either ExileRegular or ExileHardcore
