--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: ESM_ARMA_SERVER
     network_mode: host
     volumes:
+      - './server/@exile:/arma3server/@exile'
       - './server/@exileserver:/arma3server/@exileserver'
       - './server/mpmissions:/arma3server/mpmissions'
       - 'server-data:/arma3server'
