Working linux build Fixed windows build

--- a/server/@exileserver/extdb-conf.ini
+++ b/server/@exileserver/extdb-conf.ini
@@ -1,6 +1,6 @@
 [Main]
 Version = 5
-;Threads = 0  
+;Threads = 0
 ; Default Value is the number of CPU Cores Detected (max value is 6, min value is 2)
 Randomize Config File = false
 ;This is a legacy option to randomize config file for Arma2 Servers. Only for Windows Builds
@@ -65,10 +65,10 @@ Flush = true
 
 [exile]
 Type = MySQL
-Name = exile
-Username = changeme
-Password = 
-IP = 127.0.0.1
+Name = exile_esm
+Username = root
+Password = password12345
+IP = mysql_db
 Port = 3306
 minSessions = 2
 idleTime = 60
@@ -89,5 +89,5 @@ minSessions = 1
 ; 	You really should leave this value alone
 idleTime = 60
 ; idleTime no Default Value yet, needs to be defined.
-; 	idleTime is the time before a database session is stopped if not used. 
+; 	idleTime is the time before a database session is stopped if not used.
 ;	If Database Sessions are greater than minSessions
