--- a/server/@exileserver/extdb3-conf.ini
+++ b/server/@exileserver/extdb3-conf.ini
@@ -18,7 +18,7 @@ Flush = true;
 ;;    Option really only usefull if running DEBUG BUILD
 
 [exile]
-IP = 127.0.0.1
+IP = mysql_db
 Port = 3306
 Username = root
 Password =  password12345
