--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysqlv1-data:/var/lib/mysql
       - ./exile.sql:/docker-entrypoint-initdb.d/exile.sql
     networks:
       - dev
@@ -46,6 +46,7 @@ services:
 
 volumes:
   mysql-data:
+  mysqlv1-data:
   server-data:
   steam-data:
   tmp-data:
