--- a/src/esm/Cargo.toml
+++ b/src/esm/Cargo.toml
@@ -31,6 +31,8 @@ uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
 mysql_async = "0.30.0"
 tokio = { version = "1.20.1", features = ["full"] }
 rand = "0.8"
+harsh = "0.2.2"
+parking_lot = { version = "0.12.1", features = ["serde", "deadlock_detection"] }
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
