--- a/src/esm/Cargo.toml
+++ b/src/esm/Cargo.toml
@@ -15,25 +15,29 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arma-rs = { version = "1.9", features = ["uuid", "serde_json", "chrono"] }
+base64 = "0.21"
+chrono = { version = "0.4", features = ["serde"] }
+esm_message = { path = "../message/message" }
+harsh = "0.2.2"
+lazy_static = "1.4.0"
+log = "*"
+log4rs = "*"
+message-io = { version = "0.17", default-features = false, features = ["tcp"] }
+mysql_async = "0.32"
+parking_lot = { version = "0.12.1", features = ["serde", "deadlock_detection"] }
+rand = "*"
+rust-ini = "0.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-arma-rs = { version = "1.9", features = ["uuid", "serde_json", "chrono"] }
-base64 = "0.12.3"
-log = "0.4.11"
-lazy_static = "1.4.0"
-log4rs = "0.13.0"
-chrono = { version = "0.4", features = ["serde"] }
-rust-ini = "0.16.1"
-esm_message = { path = "../message/message" }
-message-io = { version = "0.14", default-features = false, features = ["tcp"] }
-serde_yaml = "0.8"
-uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
-mysql_async = "0.30.0"
-tokio = { version = "1.20.1", features = ["full"] }
-rand = "0.8"
-harsh = "0.2.2"
-parking_lot = { version = "0.12.1", features = ["serde", "deadlock_detection"] }
+serde_yaml = "0.9"
+tokio = { version = "1", features = ["full"] }
+uuid = { version = "1.3", features = ["serde", "v4", "fast-rng"] }
 
 [dev-dependencies]
-pretty_assertions = "0.6.1"
+pretty_assertions = "1.3"
 regex = "1"
+
+[dependencies.mysql_common]
+version = "0.30.4"
+features = ["chrono"]
