--- a/src/esm/Cargo.toml
+++ b/src/esm/Cargo.toml
@@ -31,8 +31,10 @@ rust-ini = "0.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
+serde_repr = "0.1"
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.3", features = ["serde", "v4", "fast-rng"] }
+aes-gcm = "0.9.1"
 
 [dev-dependencies]
 pretty_assertions = "1.3"
