--- a/src/esm/Cargo.toml
+++ b/src/esm/Cargo.toml
@@ -35,6 +35,7 @@ tokio = { version = "1", features = ["full"] }
 uuid = { version = "1.8", features = ["serde", "v4", "fast-rng"] }
 openssl = "0.10"
 base64 = "0.22"
+flate2 = "1.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4"
