--- a/src/message/Cargo.toml
+++ b/src/message/Cargo.toml
@@ -13,5 +13,5 @@ serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
 arma-rs = { version = "1.10", features = ["uuid", "serde_json", "chrono"] }
-message_proc = { path = "../message_proc" }
 unicode-segmentation = "1.11.0"
+arma-rs-proc = { git="https://github.com/BrettMayson/arma-rs", version = "1.10" }
