--- a/src/@esm/constants.jsonc
+++ b/src/@esm/constants.jsonc
@@ -1,4 +1,6 @@
 {
+    "FLAG_OK": 0,
+    "FLAG_STOLEN": 1,
     "TERRITORY_BUILDER_RIGHTS": 1,
     "TERRITORY_ACCESS_NONE": 0,
     "TERRITORY_ACCESS_BUILDER": 1,
