--- a/src/@esm/addons/exile_server_manager/stringtable.yml
+++ b/src/@esm/addons/exile_server_manager/stringtable.yml
@@ -12,208 +12,207 @@
 #
 # For example:
 #
-# # YAML                                      # XML
-# MyNewContainer:                             # <Container name="MyNewContainer">
-# - id: "MyLocalizedString"                   #   <Key ID="STR_ESM_MyLocalizedString">
-#   arguments:                                #     <!-- %1 - Some argument | %2 - Another -->
-#   - Some argument                           #
-#   - Another                                 #
-#   english: "Hello %1, how are you %2?"      #     <English>Hello %1, how are you %2?</English>
-#   german: "Hallo %1, wie geht es dir %2?"   #     <German>Hallo %1, wie geht es dir %2?</German>
-#                                             #   </Key>
-#                                             #
-# - id: "AnotherString"                       #   <Key ID="STR_ESM_AnotherString">
-#                                             #     <!-- None -->
-#   english: "This is short"                  #     <English>This is short</English>
-#                                             #   </Key>
-#                                             # </Container>
+# # YAML                                        # XML
+# MyNewContainer:                               # <Container name="MyNewContainer">
+#   MyLocalizedString:                          #   <Key ID="STR_ESM_MyLocalizedString">
+#     arguments:                                #     <!-- %1 - Some argument | %2 - Another -->
+#     - Some argument                           #
+#     - Another                                 #
+#     english: "Hello %1, how are you %2?"      #     <English>Hello %1, how are you %2?</English>
+#     german: "Hallo %1, wie geht es dir %2?"   #     <German>Hallo %1, wie geht es dir %2?</German>
+#                                               #   </Key>
+#   AnotherString:                              #   <Key ID="STR_ESM_AnotherString">
+#                                               #     <!-- None -->
+#     english: "This is short"                  #     <English>This is short</English>
+#                                               #   </Key>
+#                                               # </Container>
 
 ################################################################################
 # Commonly used words, phrases, errors, etc.
 General:
-- id: "Success"
-  english: "Success"
+  Success:
+    english: "Success"
 
-- id: "Territory"
-  english: "Territory"
+  Territory:
+    english: "Territory"
 
-- id: "Player"
-  english: "Player"
+  Player:
+    english: "Player"
 
-- id: "Target"
-  english: "Target"
+  Target:
+    english: "Target"
 
-- id: "Receipt"
-  english: "Receipt"
+  Receipt:
+    english: "Receipt"
 
-- id: "Poptabs"
-  arguments:
-  - "Number of poptabs"
-  english: "%1 poptab(s)"
+  Poptabs:
+    arguments:
+    - "Number of poptabs"
+    english: "%1 poptab(s)"
 
-- id: "PlayerNeedsToJoin"
-  arguments:
-  - "Player mention"
-  - "Server ID"
-  english: "Hey %1, you **need to join** `%2` first before you can run commands on it"
+  PlayerNeedsToJoin:
+    arguments:
+    - "Player mention"
+    - "Server ID"
+    english: "Hey %1, you **need to join** `%2` first before you can run commands on it"
 
-- id: "TargetNeedsToJoin"
-  arguments:
-  - "Player mention"
-  - "Target mention or Steam UID"
-  - "Server ID"
-  english: "Hey %1, %2 **needs to join** `%3` first before you can use them as a target in a command on this server"
+  TargetNeedsToJoin:
+    arguments:
+    - "Player mention"
+    - "Target mention or Steam UID"
+    - "Server ID"
+    english: "Hey %1, %2 **needs to join** `%3` first before you can use them as a target in a command on this server"
 
-- id: "AlivePlayer"
-  arguments:
-  - "Player mention"
-  - "Server ID"
-  english: "Hey %1, you are dead. You must be alive on `%2` in order to use this command"
+  AlivePlayer:
+    arguments:
+    - "Player mention"
+    - "Server ID"
+    english: "Hey %1, you are dead. You must be alive on `%2` in order to use this command"
 
-- id: "NullFlag"
-  arguments:
-  - "Player mention"
-  - "Territory ID"
-  - "Server ID"
-  english: "Hey %1, I was unable to find a territory with the ID of `%2`. Please double check that you typed the correct ID. You may also send me `/server my territories for:%3` to see your territories"
+  NullFlag:
+    arguments:
+    - "Player mention"
+    - "Territory ID"
+    - "Server ID"
+    english: "Hey %1, I was unable to find a territory with the ID of `%2`. Please double check that you typed the correct ID. You may also send me `/server my territories for:%3` to see your territories"
 
-- id: "NullFlag_Admin"
-  arguments:
-  - "Function name"
-  english: "Function %1 was called but the territory flag was not found in game"
+  NullFlag_Admin:
+    arguments:
+    - "Function name"
+    english: "Function %1 was called but the territory flag was not found in game"
 
-- id: "MissingTerritoryAccess"
-  arguments:
-  - "Player mention"
-  - "Territory ID"
-  english: "%1, you do not have permission to perform this action on `%2`"
+  MissingTerritoryAccess:
+    arguments:
+    - "Player mention"
+    - "Territory ID"
+    english: "%1, you do not have permission to perform this action on `%2`"
 
-- id: "MissingTerritoryAccess_Admin"
-  english: "Player attempted to perform an action on Territory but they do not have access"
+  MissingTerritoryAccess_Admin:
+    english: "Player attempted to perform an action on Territory but they do not have access"
 
 ################################################################################
 # /territory add_player
 ESMs_command_add:
-- id: "Add_CannotAddSelf"
-  arguments:
-  - "Player mention"
-  english: Hey %1, you cannot add yourself to this territory
+  Add_CannotAddSelf:
+    arguments:
+    - "Player mention"
+    english: Hey %1, you cannot add yourself to this territory
 
-- id: "Add_ExistingRights"
-  arguments:
-  - "Player mention"
-  english: "Hey %1, this player already has build rights"
+  Add_ExistingRights:
+    arguments:
+    - "Player mention"
+    english: "Hey %1, this player already has build rights"
 
-# Discord message to logging channel
-- id: "Add_Log_Title"
-  english: "`ESMs_command_add` executed successfully"
+  # Discord message to logging channel
+  Add_Log_Title:
+    english: "`ESMs_command_add` executed successfully"
 
-- id: "Add_Log_Description"
-  english: "Player added Target to territory"
+  Add_Log_Description:
+    english: "Player added Target to territory"
 
 ESMs_command_demote:
-- id: "Demote_CannotDemoteOwner"
-  arguments:
-  - "Player mention"
-  english: "%1, you have no power here!"
+  Demote_CannotDemoteOwner:
+    arguments:
+    - "Player mention"
+    english: "%1, you have no power here!"
 
-- id: "Demote_CannotDemoteBuilder"
-  arguments:
-  - "Player mention"
-  english: "Hey %1, you cannot demote someone who is already at the lowest rank. If you are looking to remove the player from the territory, use `/territory remove_player`"
+  Demote_CannotDemoteBuilder:
+    arguments:
+    - "Player mention"
+    english: "Hey %1, you cannot demote someone who is already at the lowest rank. If you are looking to remove the player from the territory, use `/territory remove_player`"
 
-- id: "Demote_CannotDemoteNothing"
-  arguments:
-  - "Player mention"
-  english: "Hey %1, you can't demote someone you have no power over."
+  Demote_CannotDemoteNothing:
+    arguments:
+    - "Player mention"
+    english: "Hey %1, you can't demote someone you have no power over."
 
-# Discord message to logging channel
-- id: "Demote_Log_Title"
-  english: "`ESMs_command_demote` executed successfully"
+  # Discord message to logging channel
+  Demote_Log_Title:
+    english: "`ESMs_command_demote` executed successfully"
 
-- id: "Demote_Log_Description"
-  english: "Player demoted Target in territory"
+  Demote_Log_Description:
+    english: "Player demoted Target in territory"
 
 ################################################################################
 # /territory upgrade
 ESMs_command_upgrade:
-- id: "Upgrade_StolenFlag"
-  arguments:
-  - "Player mention"
-  - "Territory ID"
-  english: "Hey %1, the territory flag for `%2` has been stolen! You need to get it back before you can upgrade your base"
+  Upgrade_StolenFlag:
+    arguments:
+    - "Player mention"
+    - "Territory ID"
+    english: "Hey %1, the territory flag for `%2` has been stolen! You need to get it back before you can upgrade your base"
 
-- id: "Upgrade_MaxLevel"
-  arguments:
-  - "Player mention"
-  - "Territory ID"
-  english: "Hey %1, `%2` cannot be upgrade as that it is already at the highest level"
+  Upgrade_MaxLevel:
+    arguments:
+    - "Player mention"
+    - "Territory ID"
+    english: "Hey %1, `%2` cannot be upgrade as that it is already at the highest level"
 
-- id: "Upgrade_TooPoor"
-  arguments:
-  - "Player mention"
-  - "Upgrade cost"
-  - "Current locker amount"
-  english: "Hey %1, you do not have enough poptabs in your locker. It costs **%2** and you have **%3**"
+  Upgrade_TooPoor:
+    arguments:
+    - "Player mention"
+    - "Upgrade cost"
+    - "Current locker amount"
+    english: "Hey %1, you do not have enough poptabs in your locker. It costs **%2** and you have **%3**"
 
-# Toast message to player
-- id: "Upgrade_Toast_Title"
-  english: "Territory upgraded!"
+  # Toast message to player
+  Upgrade_Toast_Title:
+    english: "Territory upgraded!"
 
-- id: "Upgrade_Toast_Description"
-  arguments:
-  - "Territory level"
-  - "Territory radius"
-  english: "Your territory has reached level %1 and now has a new radius of %2 meters."
+  Upgrade_Toast_Description:
+    arguments:
+    - "Territory level"
+    - "Territory radius"
+    english: "Your territory has reached level %1 and now has a new radius of %2 meters."
 
-# Discord message to player
-- id: "Upgrade_Response_Title"
-  arguments:
-  - "Territory ID"
-  - "Territory level"
-  english: "`%1` has been upgraded to level %2"
+  # Discord message to player
+  Upgrade_Response_Title:
+    arguments:
+    - "Territory ID"
+    - "Territory level"
+    english: "`%1` has been upgraded to level %2"
 
-- id: "Upgrade_Response_Description"
-  arguments:
-  - "Range"
-  - "Current object count"
-  - "Max object count"
-  english: |-
-    **Range:** %1 meters
-    **Objects:** %2 / %3
+  Upgrade_Response_Description:
+    arguments:
+    - "Range"
+    - "Current object count"
+    - "Max object count"
+    english: |-
+      **Range:** %1 meters
+      **Objects:** %2 / %3
 
-- id: "Upgrade_Response_Receipt"
-  arguments:
-  - "Locker balance before"
-  - "Upgrade cost"
-  - "Tax amount"
-  - "Tax percentage"
-  - "Locker balance after"
-  english: |
-    ```
-             Locker:  +%1
-       Flag upgrade:  -%2
-    Convenience fee:  -%3 (%4 percent)
-            Balance:  =%5 poptab(s)
-    ```
+  Upgrade_Response_Receipt:
+    arguments:
+    - "Locker balance before"
+    - "Upgrade cost"
+    - "Tax amount"
+    - "Tax percentage"
+    - "Locker balance after"
+    english: |
+      ```
+              Locker:  +%1
+        Flag upgrade:  -%2
+      Convenience fee:  -%3 (%4 percent)
+              Balance:  =%5 poptab(s)
+      ```
 
-# Discord message to logging channel
-- id: "Upgrade_Log_Title"
-  english: "`ESMs_command_upgrade` executed successfully"
+  # Discord message to logging channel
+  Upgrade_Log_Title:
+    english: "`ESMs_command_upgrade` executed successfully"
 
-- id: "Upgrade_Log_Description"
-  arguments:
-  - "Territory level"
-  - "Locker balance before"
-  - "Upgrade cost"
-  - "Tax amount"
-  - "Tax percentage"
-  - "Locker balance after"
-  english: |
-    Territory upgraded to level %1
-    ```
-             Locker:  +%2
-       Flag upgrade:  -%3
-    Convenience fee:  -%4 (%5 percent)
-            Balance:  =%6 poptab(s)
-    ```
+  Upgrade_Log_Description:
+    arguments:
+    - "Territory level"
+    - "Locker balance before"
+    - "Upgrade cost"
+    - "Tax amount"
+    - "Tax percentage"
+    - "Locker balance after"
+    english: |
+      Territory upgraded to level %1
+      ```
+              Locker:  +%2
+        Flag upgrade:  -%3
+      Convenience fee:  -%4 (%5 percent)
+              Balance:  =%6 poptab(s)
+      ```
